--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "fancybox": "^3.0.0",
     "jquery": "^3.2.1",
     "owlcarousel": "^1.3.3"
   }
